2nd day updated

--- a/pandas_practice.ipynb
+++ b/pandas_practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f7c52751",
+   "id": "85ea50dc",
    "metadata": {},
    "source": [
     "# Date-27/07/2024 (Day-1)"
@@ -2503,7 +2503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d719d58",
+   "id": "fc46a733",
    "metadata": {},
    "source": [
     "## Date- 27/07/2024 (Day-2)"
@@ -2512,7 +2512,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d55b68a8",
+   "id": "6ed505f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2524,7 +2524,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "05f38712",
+   "id": "bd8e29b3",
    "metadata": {},
    "outputs": [
     {
@@ -2625,7 +2625,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "b63ae12e",
+   "id": "59feec27",
    "metadata": {},
    "source": [
     "### Incase you have an unnecessary header \n",
@@ -2636,7 +2636,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "f2edcc96",
+   "id": "d8f5a603",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2647,7 +2647,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "05f58418",
+   "id": "ef28f179",
    "metadata": {},
    "outputs": [
     {
@@ -2745,7 +2745,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "ed54fb76",
+   "id": "c83d781e",
    "metadata": {},
    "outputs": [
     {
@@ -2843,7 +2843,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "bcc24cd7",
+   "id": "bbb8ed3d",
    "metadata": {},
    "outputs": [
     {
@@ -2945,7 +2945,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "8503f84e",
+   "id": "77d679f1",
    "metadata": {},
    "source": [
     "### Suppose you do not have headers (check below image)\n",
@@ -2957,7 +2957,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "74fbe327",
+   "id": "517e8b60",
    "metadata": {},
    "outputs": [
     {
@@ -3047,7 +3047,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "bf811941",
+   "id": "4292ddac",
    "metadata": {},
    "outputs": [
     {
@@ -3145,7 +3145,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "32e4c3fb",
+   "id": "4674ea84",
    "metadata": {},
    "outputs": [
     {
@@ -3243,7 +3243,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "58aee4fc",
+   "id": "e5d76408",
    "metadata": {},
    "outputs": [
     {
@@ -3341,7 +3341,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "0096bbf0",
+   "id": "6d78bb83",
    "metadata": {},
    "outputs": [
     {
@@ -3423,7 +3423,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "630f1aa9",
+   "id": "b52dc5e5",
    "metadata": {},
    "outputs": [
     {
@@ -3522,7 +3522,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "865568b4",
+   "id": "4837d2d9",
    "metadata": {},
    "outputs": [
     {
@@ -3619,8 +3619,231 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 60,
+   "id": "8ee01d7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tickers</th>\n",
+       "      <th>eps</th>\n",
+       "      <th>revenue</th>\n",
+       "      <th>price</th>\n",
+       "      <th>people</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>GOOGL</td>\n",
+       "      <td>27.82</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>845.0</td>\n",
+       "      <td>larry page</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>WMT</td>\n",
+       "      <td>4.61</td>\n",
+       "      <td>484.0</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>MSFT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>bill gates</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>RIL</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1023.0</td>\n",
+       "      <td>mukesh ambani</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>TATA</td>\n",
+       "      <td>5.60</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ratan tata</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  tickers    eps  revenue   price         people\n",
+       "0   GOOGL  27.82     87.0   845.0     larry page\n",
+       "1     WMT   4.61    484.0    65.0            NaN\n",
+       "2    MSFT    NaN     85.0    64.0     bill gates\n",
+       "3    RIL     NaN     50.0  1023.0  mukesh ambani\n",
+       "4    TATA   5.60      NaN     NaN     ratan tata"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# here you can see that one more problem is there\n",
+    "# which is in revenue column, if you see that there is -1, which is a bit uncertain\n",
+    "df2_updated=pd.read_csv(\"C:/Users/ritti/Downloads/internal_skill_stuff/prac_python/Data/stock_data.csv\",na_values=[\"not available\",\"n.a.\",-1])\n",
+    "df2_updated"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "ec3e35c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tickers</th>\n",
+       "      <th>eps</th>\n",
+       "      <th>revenue</th>\n",
+       "      <th>price</th>\n",
+       "      <th>people</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>GOOGL</td>\n",
+       "      <td>27.82</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>845.0</td>\n",
+       "      <td>larry page</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>WMT</td>\n",
+       "      <td>4.61</td>\n",
+       "      <td>484.0</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>MSFT</td>\n",
+       "      <td>-1.00</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>bill gates</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>RIL</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1023.0</td>\n",
+       "      <td>mukesh ambani</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>TATA</td>\n",
+       "      <td>5.60</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ratan tata</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  tickers    eps  revenue   price         people\n",
+       "0   GOOGL  27.82     87.0   845.0     larry page\n",
+       "1     WMT   4.61    484.0    65.0            NaN\n",
+       "2    MSFT  -1.00     85.0    64.0     bill gates\n",
+       "3    RIL     NaN     50.0  1023.0  mukesh ambani\n",
+       "4    TATA   5.60      NaN     NaN     ratan tata"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# but if you see the eps( earn per share) there is also -1, so if we update -1 in revenue then automatically -1 in esp will get changed, which we dont want because it makes sense\n",
+    "# therefore we can use dictionary to solve this problem\n",
+    "df2_updated=pd.read_csv(\"C:/Users/ritti/Downloads/internal_skill_stuff/prac_python/Data/stock_data.csv\",na_values={\"eps\":[\"not available\",\"n.a.\"],\n",
+    "                                                                                                                 \"revenue\":[\"not available\",\"n.a.\",-1],\n",
+    "                                                                                                                 \"price\":[\"not available\",\"n.a.\"],\n",
+    "                                                                                                                 \"people\":[\"not available\",\"n.a.\"]})\n",
+    "df2_updated"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f273c5d",
+   "metadata": {},
+   "source": [
+    "# header~columns\n",
+    "# index~ rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "435997d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# here if you see an unnecessary index is arising for that you have to use (index=False)\n",
+    "df2_updated.to_csv(\"C:/Users/ritti/Downloads/internal_skill_stuff/prac_python/Data/stock_data_updated.csv\",index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "43706b04",
+   "id": "fa15975a",
    "metadata": {},
    "outputs": [],
    "source": []
